remove max perm size
Signed-off-by: Christian Dietrich <christian.dietrich@itemis.de>